# llm-automation-agent

./: .dockerignore  Dockerfile  LICENSE  README.md  actual_tools.ipynb  extra.py  function_definations.py  functions.py  main.py  main2.py  main3.py  main_final.py  main_perplex.py  process_task.py  pyproject.toml  requirements.txt  test.ipynb  test2.ipynb  tools.py  tools_try.py
